--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,9 @@ name = "pypi"
 
 [packages]
 flask = "*"
+wtforms = "==3.1.2"
+sqlalchemy = "==2.0.30"
+flask-sqlalchemy = "==3.1.1"
 
 [dev-packages]
 
