feat: 构建client验证器， 创建模型，客户端注册，生成用户数据

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,10 @@ flask = "*"
 wtforms = "==3.1.2"
 sqlalchemy = "==2.0.30"
 flask-sqlalchemy = "==3.1.1"
+cymysql = "==1.0.1"
+email_validator = "==2.1.2"
+scrypt = "==0.8.24"
+cryptocode = "*"
 
 [dev-packages]
 
