--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ email_validator = "==2.1.2"
 scrypt = "==0.8.24"
 cryptocode = "*"
 authlib = "==1.3.1"
+flask_httpauth = "==4.8.0"
 
 [dev-packages]
 
